Fix buttons alignments

--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@
 
   .next-btn {
     top: 330px;
-    right: 80px;
+    right: 50px;
 }
 
 }
